--- a/src/jade/poetry.jade
+++ b/src/jade/poetry.jade
@@ -2,7 +2,7 @@
   img(src='images/lights/lights-1.png', width='100%')
 .content
   h3(align='center') poetry collection, 2013: 
-    a(ui-sref="poemName({ poem: 'colossus' })") not quite a colossus, not yet a champion
+    a(ui-sref="poemName({ poem: 'not-quite-a-colossus' })") not quite a colossus, not yet a champion
     
   .nav
     p
