--- a/src/jade/poetry/not-quite-a-colossus.jade
+++ b/src/jade/poetry/not-quite-a-colossus.jade
@@ -7,7 +7,7 @@
 .content
   p
     a(href='/poetry/not-yet-a-champion')
-      img(src='/images/colossus:champion-cover.png', alt='', title='', width='100%')
+      img(src='/images/colossus_champion-cover.png', alt='', title='', width='100%')
   p
     | it is ok to fail. obsession with failure turns you into a bitter and shortsighted fool for whom any happiness is a harbinger of darkness to come
   p so relax
