--- a/index.jade
+++ b/index.jade
@@ -8,6 +8,7 @@ html
     script.
       System.import('src/js/head/app.js')
     link(href='src/css/style.css', rel='stylesheet', type='text/css')
+    link(href='jspm_packages/npm/purecss@0.6/build/pure-min.css')
     link(href='http://www.completelyfictional.com', rel='canonical', type='text/css')
     title Completely Fictional
   body(ng-app='completely-fictional')
@@ -29,7 +30,7 @@ html
           a(href='go-away/please') &copy;
           |  2010-
           span(ng-bind='ndx.currentYear')
-          |  — 
+          |   &mdash;  
           a(href='/') Zack Schuster
           | . All content licensed under 
           a(rel='license', href='http://creativecommons.org/licenses/by-nc/3.0/us/') CC BY-NC 3.0
