--- a/src/jade/extras.jade
+++ b/src/jade/extras.jade
@@ -1,6 +1,6 @@
 .content-image
   img(src='images/schuster.jpeg', width='100%')
-  p(align='center', style='margin-top:0.5em; background: #fff; padding: 1.25em 1em 1.25em 1em;') email [at] zackschuster [dot] com
+  p(align='center', style='margin-top:0.5em; background: #fff; padding: 1.25em 1em 1.25em 1em;') zs [dot] schuster [at] gmail [dot] com
 .content
   h1 Let's call this a "potpourri" of extras because that seems like a fun thing to do
   ul.padding
