(actually) fixed track-01-snapshot link

--- a/src/jade/trackback.jade
+++ b/src/jade/trackback.jade
@@ -12,7 +12,7 @@
     |  — 
     a(href='http://beachsloth.blogspot.com/2011/12/trackback-by-zack-shuster.html') Beach Sloth
   p(style='padding:1em 0 1em 0;')
-    a(ui-sref="trackback({ chapter: 'track-01-snapshot.html' })") Read the first chapter for free
+    a(ui-sref="trackbackChapter({ chapter: 'track-01-snapshot' })") Read the first chapter for free
   blockquote
     | Life’s stories are like tracks on an album of music. Some are short, others are long; most are only vaguely related, but are most definitely related; many things make them unique, but I guarantee that someone you’ll never meet is still out there somewhere singing a similar song.
   p
