--- a/index.jade
+++ b/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    base(href='/')
+    // base(href='/')
     script(src='jspm_packages/system.js')
     script(src='config.js')
     script(src='dist/js/app.head.js')
@@ -14,7 +14,7 @@ html
   body(ng-app='completely-fictional')
     .container
       .header
-        a.image(href='/')
+        a.image(ui-sref="home")
           img(src='images/cf-header.jpg', title='', alt='cf-header', width='100%')
       .column
         p.nav-links
@@ -31,7 +31,7 @@ html
           |  2010-
           span(ng-bind='ndx.currentYear')
           |   &mdash;  
-          a(href='/') Zack Schuster
+          a(ui-sref="home") Zack Schuster
           | . All content licensed under 
           a(rel='license', href='http://creativecommons.org/licenses/by-nc/3.0/us/') CC BY-NC 3.0
         .socialmedia(style='margin-bottom:4.9em;')
