fixed essays & reviews sections, updated routing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,6 +37,7 @@ a.extras { border-bottom: 0.1em solid #FFAAD3; }
 .header {float: left; border:none;}
 
 .content-image {width:23%; float:left; margin: 0 0.5em 0 0;}
+.content-header {width:67%; float: right; text-align:justify; padding: 0.5em 3em; margin: 0 0 0.5em 0; background:#fff;}
 .content {width:67%; float: right; text-align:justify; padding: 2em 3em 4em 3em; margin: 0 0 0.5em 0; background:#fff;}
 
 .column {float: left; width:100%; padding: 2em 0 2em 0; margin: 0 0 0.5em 0; background:#fff;}
