--- a/src/jade/essays.jade
+++ b/src/jade/essays.jade
@@ -6,14 +6,14 @@
 
   ul.padding
     li
-      a(ui-sref="essays.name({ essay: 'tree-of-life' })") We are all branches on the tree of life: an essay exploring meaning in 'The Tree of Life'
+      a(ui-sref="essay({ name: 'tree-of-life' })") We are all branches on the tree of life: an essay exploring meaning in 'The Tree of Life'
     li
-      a(ui-sref="essays.name({ essay: 'internet-poetry' })") A minor and insignificant treatise on Internet Poetry, and the disparity between presence and person therein.
+      a(ui-sref="essay({ name: 'internet-poetry' })") A minor and insignificant treatise on Internet Poetry, and the disparity between presence and person therein.
     // li
-    //   a(ui-sref="essays.name({ essay: 'hangover-part-ii' })") Taste and subjectivity, as framed by 'The Hangover: Part II'
+    //   a(ui-sref="essays.name({ name: 'hangover-part-ii' })") Taste and subjectivity, as framed by 'The Hangover: Part II'
     li
-      a(ui-sref="essays.name({ essay: 'lana-del-rey' })") Feminism, Image Obsession and Lana Del Rey, 'Born to Die'.
+      a(ui-sref="essay({ name: 'lana-del-rey' })") Feminism, Image Obsession and Lana Del Rey, 'Born to Die'.
     li
-      a(ui-sref="essays.name({ essay: 'max-payne-3' })") Max Payne 3, neo-noir, style and difficulty
+      a(ui-sref="essay({ name: 'max-payne-3' })") Max Payne 3, neo-noir, style and difficulty
     li
       a(href='http://banangolit.com/post/26441571350/guest-post-thoughts-on-walter-mackey-quickshit') Thoughts on Walter Mackey and Quickshit
