--- a/src/jade/reviews.jade
+++ b/src/jade/reviews.jade
@@ -1,25 +1,23 @@
 .content-image
   img(src='images/reviews/cf-sidebar-reviews.jpg', width='100%')
+
 .content
-  
-  ui-view
-  
   ul.padding
     li
-      a(ui-sref="review.name({ review: 'agora-by-derek-piotr' })") 'AGORA' by Derek Piotr
+      a(ui-sref="review({ name: 'agora-by-derek-piotr' })") 'AGORA' by Derek Piotr
     li
-      a(ui-sref="review.name({ review: 'lightning-lightening-by-katey-metcalf' })") 'lightning/lightening' by Katey Metcalf
+      a(ui-sref="review({ name: 'lightning-lightening-by-katey-metcalf' })") 'lightning/lightening' by Katey Metcalf
     li
-      a(ui-sref="review.name({ review: 'a-million-bears-by-spencer-madsen' })") 'a million bears' by Spencer Madsen
+      a(ui-sref="review({ name: 'a-million-bears-by-spencer-madsen' })") 'a million bears' by Spencer Madsen
     li
-      a(ui-sref="review.name({ review: 'fairfaxe-by-tristan-newcomb' })") 'Fairfaxe' by Tristan Newcomb
+      a(ui-sref="review({ name: 'fairfaxe-by-tristan-newcomb' })") 'Fairfaxe' by Tristan Newcomb
     li
-      a(ui-sref="review.name({ review: 'oiplf-by-tristan-newcomb' })") 'Only Interstellar Pinball Lives Forever' by Tristan Newcomb
+      a(ui-sref="review({ name: 'oiplf-by-tristan-newcomb' })") 'Only Interstellar Pinball Lives Forever' by Tristan Newcomb
     li
-      a(ui-sref="review.name({ review: 'sotcts-by-tristan-newcomb' })") 'Summer of the Chew Toy Soul' by Tristan Newcomb
+      a(ui-sref="review({ name: 'sotcts-by-tristan-newcomb' })") 'Summer of the Chew Toy Soul' by Tristan Newcomb
     li
-      a(ui-sref="review.name({ review: 'lifted-by-bright-eyes' })") 'Lifted or The Story is in the Soil, Keep Your Ear to the Ground' by Bright Eyes
+      a(ui-sref="review({ name: 'lifted-by-bright-eyes' })") 'Lifted or The Story is in the Soil, Keep Your Ear to the Ground' by Bright Eyes
     li
-      a(ui-sref="review.name({ review: 'limitless' })") ‘Limitless’, dir. by Neil Burger
+      a(ui-sref="review({ name: 'limitless' })") ‘Limitless’, dir. by Neil Burger
     li
-      a(ui-sref="review.name({ review: 'rango' })") 'Rango', dir. by Gore Verbinski
+      a(ui-sref="review({ name: 'rango' })") 'Rango', dir. by Gore Verbinski
