--- a/src/jade/reviews/a-million-bears-by-spencer-madsen.jade
+++ b/src/jade/reviews/a-million-bears-by-spencer-madsen.jade
@@ -1,6 +1,6 @@
 .content-image
-  a(href='images/spencer-madsen.jpg')
-    img(src='images/spencer-madsen.jpg', alt='spencer-madsen', title='Yes.', width='100%')
+  a.image(href='images/reviews/spencer-madsen.jpg')
+    img(src='images/reviews/spencer-madsen.jpg', alt='spencer-madsen', title='Yes.', width='100%')
 .content
   h1(style='margin-bottom:0;') a million bears
   h3(style='margin-top:0.5em;') by Spencer Madsen
