--- a/src/jade/reviews/agora-by-derek-piotr.jade
+++ b/src/jade/reviews/agora-by-derek-piotr.jade
@@ -1,5 +1,6 @@
 .content-image
-  img(src='images/agora.jpg', alt='agoooooraaaaaaa', title="It's beautiful, in a surrealist slasher film kind of way.", width='100%')
+  a.image(href='images/reviews/agora.jpg')
+    img(src='images/reviews/agora.jpg', alt='agoooooraaaaaaa', title="It's beautiful, in a surrealist slasher film kind of way.", width='100%')
 .content
   h1(style='margin-bottom:0;') AGORA
   h3(style='margin-top:0.5em;') by Derek Piotr
