--- a/src/jade/reviews/fairfaxe-by-tristan-newcomb.jade
+++ b/src/jade/reviews/fairfaxe-by-tristan-newcomb.jade
@@ -1,6 +1,6 @@
 .content-image
-  a.image(href='images/Fairfaxe-Cover.jpg')
-    img(src='images/Fairfaxe-Cover.jpg', alt='', title="Look at those lil' bewildered ears of his...", width='100%')
+  a.image(href='images/reviews/Fairfaxe-Cover.jpg')
+    img(src='images/reviews/Fairfaxe-Cover.jpg', alt='', title="Look at those lil' bewildered ears of his...", width='100%')
 .content
   h1(style='margin-bottom:0;') Fairfaxe
   h3(style='margin-top:0.5em;') by Tristan Newcomb
