--- a/src/jade/reviews/lifted-by-bright-eyes.jade
+++ b/src/jade/reviews/lifted-by-bright-eyes.jade
@@ -1,6 +1,6 @@
 .content-image
-  a(href='images/lifted-album-art.jpeg')
-    img(src='images/lifted-album-art.jpeg', alt='', width='100%')
+  a.image(href='images/reviews/lifted-album-art.jpeg')
+    img(src='images/reviews/lifted-album-art.jpeg', alt='', width='100%')
 .content
   h1(style='margin-bottom:0;') Lifted, or The Story Is In The Soil, Keep Your Ear to the Ground
   h3(style='margin-top:0.5em;') by Bright Eyes
