--- a/src/jade/reviews/lightning-lightening-by-katey-metcalf.jade
+++ b/src/jade/reviews/lightning-lightening-by-katey-metcalf.jade
@@ -1,5 +1,6 @@
 .content-image
-  img(src='images/katey-metcalf.png', width='100%')
+  a.image(href='images/reviews/katey-metcalf.png')
+    img(src='images/reviews/katey-metcalf.png', width='100%')
 .content
   h1(style='margin-bottom:0;') lightning/lightening
   h3(style='margin-top: 0.5em;') by Katey Metcalf
