--- a/src/jade/reviews/limitless.jade
+++ b/src/jade/reviews/limitless.jade
@@ -1,6 +1,6 @@
 .content-image
-  a.image(href='images/limitless_poster.jpg')
-    img(src='images/limitless_poster.jpg', alt='', title='Sexy, sexy Bradley Cooper.', width='100%')
+  a.image(href='images/reviews/limitless.jpg')
+    img(src='images/reviews/limitless.jpg', alt='', title='Sexy, sexy Bradley Cooper.', width='100%')
 .content
   h1(style='margin-bottom:0;') Limitless
   h3(style='margin-top:0.5em;') dir. by Neil Burger
