--- a/src/jade/reviews/oiplf-by-tristan-newcomb.jade
+++ b/src/jade/reviews/oiplf-by-tristan-newcomb.jade
@@ -1,6 +1,6 @@
 .content-image
-  a.image(href='images/oiplf-poster.png')
-    img(src='images/oiplf-poster.png', alt='Sadly, the true hero of the story, Piggington, did not get his proper billing.', title='Piggington is my spirit animal.', width='100%')
+  a.image(href='images/reviews/oiplf-poster.png')
+    img(src='images/reviews/oiplf-poster.png', alt='Sadly, the true hero of the story, Piggington, did not get his proper billing.', title='Piggington is my spirit animal.', width='100%')
 .content
   h1(style='margin-bottom:0;') Only Interstellar Pinball Lives Forever
   h3(style='margin-top:0.5em;') by Tristan Newcomb
