--- a/src/jade/reviews/rango.jade
+++ b/src/jade/reviews/rango.jade
@@ -1,6 +1,6 @@
 .content-image
-  a(href='images/rango-poster.jpg')
-    img(src='images/rango-poster.jpg', alt='rango-poster', title='Mostly desaturated, for your pleasure', width='100%')
+  a.image(href='images/reviews/rango-poster.jpg')
+    img(src='images/reviews/rango-poster.jpg', alt='rango-poster', title='Mostly desaturated, for your pleasure', width='100%')
 .content
   h1(style='margin-bottom:0;') Rango
   h3(style='margin-top:0.5em;') dir. by Gore Verbinski
