--- a/src/jade/reviews/sotcts-by-tristan-newcomb.jade
+++ b/src/jade/reviews/sotcts-by-tristan-newcomb.jade
@@ -1,6 +1,6 @@
 .content-image
-  a(href='images/sotcts-poster.png')
-    img(src='images/sotcts-poster.png', alt='', title='Let it be known there should be a glass of bourbon off-screen. This is important information.', width='100%')
+  a.image(href='images/reviews/sotcts-poster.png')
+    img(src='images/reviews/sotcts-poster.png', alt='', title='Let it be known there should be a glass of bourbon off-screen. This is important information.', width='100%')
 .content
   h1(style='margin-bottom:0;') Summer of the Chew Toy Soul
   h3(style='margin-top:0.5em;') by Tristan Newcomb
