--- a/index.jade
+++ b/index.jade
@@ -19,8 +19,8 @@ html
       .column
         p.nav-links
           a(ui-sref="poetry") Poetry
-          a(ui-sref="essays") Essays
-          a(ui-sref="reviews") Reviews
+          a(ui-sref="essaylist") Essays
+          a(ui-sref="reviewlist") Reviews
           a(ui-sref="trackback") Trackback
           a(ui-sref="large-round-eyes") Large Round Eyes
           a(ui-sref="extras") Extras
