--- a/src/jade/poetry.jade
+++ b/src/jade/poetry.jade
@@ -1,7 +1,7 @@
 .content-image
   img(src='images/lights/lights-{{random}}.png', width='100%')
 
-.content
+.content-header
   h3(align='center') poetry collection, 2013: 
     a(ui-sref="poetry.book({ name: 'not-quite-a-colossus' })") not quite a colossus, not yet a champion
   
