fixed broken image link in agora review

--- a/src/jade/reviews/agora-by-derek-piotr.jade
+++ b/src/jade/reviews/agora-by-derek-piotr.jade
@@ -36,8 +36,8 @@
   p
     | God damn it, I keep wanting to defend this album. Give me a second to rationalize away the album's seeming incoherence.
   p(align='center')
-    a.image(href='images/agora.jpg')
-      img.caption(src='images/agora.jpg', alt='', title='agoooooraaaaaaa', width='50%')
+    a.image(href='images/reviews/agora.jpg')
+      img.caption(src='images/reviews/agora.jpg', alt='', title='agoooooraaaaaaa', width='50%')
     br
     | Look at the pretty album cover again.
   p
