added gitignore, cleaned up gulpfile, moved index.jade to src/jade

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    // base(href='/')
+    base(href='/')
     script(src='jspm_packages/system.js')
     script(src='config.js')
     script(src='dist/js/app.head.js')
@@ -43,8 +43,3 @@ html
             img(src='images/tumblr.png', alt='', width='10%')
           a.smimg(href='http://www.flickr.com/photos/zackschuster/')
             img(src='images/flickr.png', alt='', width='10%')
-    //
-      <script src="app.body.js"></script>
-      <script>
-      System.import('bundle.js')
-      </script>
