--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -2,13 +2,13 @@ doctype html
 html
   head
     base(href='/')
-    script(src='jspm_packages/system.js')
+    script(src='system.js')
     script(src='config.js')
     script(src='dist/js/app.head.js')
     script.
       System.import('src/js/head/app.js')
     link(href='src/css/style.css', rel='stylesheet', type='text/css')
-    link(href='jspm_packages/npm/purecss@0.6/build/pure-min.css')
+    // link(href='jspm_packages/npm/purecss@0.6/build/pure-min.css')
     link(href='http://www.completelyfictional.com', rel='canonical', type='text/css')
     title Completely Fictional
   body(ng-app='completely-fictional', ng-controller='ndxCtrl as ndx')
