--- a/src/footer-index.jade
+++ b/src/footer-index.jade
@@ -1,8 +1,8 @@
-template(bindable='router')
+template
 	.footer-index
 		p
 			a(href='go-away/please') &copy; 
-			// span(ng-bind='ndx.currentYear')
+			| 2010 - ${currentYear} &mdash;  
 			a(href='') Zack Schuster 
 			a(rel='license', href='http://creativecommons.org/licenses/by-nc/3.0/us/') CC BY-NC 3.0
 		.socialmedia(style='margin-bottom:4.9em;')
