removed unnecessary dynamic classes

--- a/src/column.jade
+++ b/src/column.jade
@@ -1,5 +1,5 @@
 template(bindable='router')
 	.column
 		p.nav-links
-			span(repeat.for='row of router.navigation', class="${row.isActive ? 'active' : ''}")
+			span(repeat.for='row of router.navigation')
 				a(href.bind='row.href') ${row.title}
