fixed header url

--- a/src/app.jade
+++ b/src/app.jade
@@ -3,7 +3,7 @@ template
   require(from='footer-index')
   .container
     .header
-      a.image(href='')
+      a.image(href='#/')
         img(src='images/cf-header.jpg', title='', alt='cf-header', width='100%')
       
     column(router.bind='router')
