--- a/src/footer-index.jade
+++ b/src/footer-index.jade
@@ -4,13 +4,7 @@ template
 			a(href='go-away/please') &copy; 
 			| 2010 - ${currentYear} &mdash;  
 			a(href='') Zack Schuster 
-			a(rel='license', href='http://creativecommons.org/licenses/by-nc/3.0/us/') CC BY-NC 3.0
-		.socialmedia(style='margin-bottom:4.9em;')
-			a.smimg(href='http://medium.com/@ghostwhiteowl')
-				img(src='images/medium.jpeg', alt='', width='10%') 
-			a.smimg(href='http://www.twitter.com/ghostwhiteowl')
-				img(src='images/twitter.png', alt='', width='10%') 
-			a.smimg(href='http://somewhatnonfictional.com')
-				img(src='images/tumblr.png', alt='', width='10%') 
-			a.smimg(href='http://www.flickr.com/photos/zackschuster/')
-				img(src='images/flickr.png', alt='', width='10%') 
+			a(rel='license', href='http://creativecommons.org/licenses/by-nc/3.0/us/') All content licensed under CC BY-NC 3.0
+		.socialmedia(style='margin-bottom:5em')
+			a.smimg(repeat.for='item of footerLinks' href='${item.url}') 
+				img(src='images/social-media/${item.img}', alt='${item.alt}', width='10%')
