updated build process to properly minify js

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,9 +5,9 @@ html
     link(rel="icon" type="image/ico" href='favicon.ico')
     script(src='system.js')
     script(src='config.js')
-    script(src='dist/js/app.head.js')
+    script(src='dist/js/bundle.js')
     script.
-      System.import('src/js/head/app.js')
+      System.import('dist/js/app.js')
     link(href='src/css/style.css', rel='stylesheet', type='text/css')
     link(href='http://www.completelyfictional.com', rel='canonical', type='text/css')
     title Completely Fictional
