--- a/src/jade/poetry/not-quite-a-colossus.jade
+++ b/src/jade/poetry/not-quite-a-colossus.jade
@@ -9,7 +9,7 @@ p so relax
 p(style='padding-bottom:33px;') (yes i am trying to convince myself of this as well)
 
 p 
-  a(ui-sref="poetry.book.poem({ poem: 'not-yet-a-champion' })") read a poem
+  a(ui-sref="poetry.poem({ poem: 'not-yet-a-champion' })") read a poem
 p
   a.gumroad-button(href='http://gum.co/dfhT') buy it
   script(type='text/javascript', src='https://gumroad.com/js/gumroad.js')
