added components (yay ng1.5!)

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,45 +1,26 @@
 doctype html
 html
-  head
+  head(lang='en')
     base(href='/')
     link(rel="icon" type="image/ico" href='favicon.ico')
-    script(src='system.js')
-    script(src='config.js')
-    script(src='dist/js/bundle.js')
-    script.
-      System.import('dist/js/app.js')
     link(href='src/css/style.css', rel='stylesheet', type='text/css')
     link(href='http://www.completelyfictional.com', rel='canonical', type='text/css')
     title Completely Fictional
+  
   body(ng-app='completely-fictional', ng-controller='ndxCtrl as ndx')
+    
     .container
-      .header
-        a.image(ui-sref="home")
-          img(src='images/cf-header.jpg', title='', alt='cf-header', width='100%')
-      .column
-        p.nav-links
-          a(ui-sref="poetry") Poetry
-          a(ui-sref="essaylist") Essays
-          a(ui-sref="reviewlist") Reviews
-          a(ui-sref="trackback") Trackback
-          a(ui-sref="large-round-eyes") Large Round Eyes
-          a(ui-sref="extras") Extras
+      cf-header
+      cf-column
+      
       div(ui-view)
-      .footer-index
-        p
-          a(href='go-away/please') &copy;
-          |  2010-
-          span(ng-bind='ndx.currentYear')
-          |   &mdash;  
-          a(ui-sref="home") Zack Schuster
-          | . All content licensed under 
-          a(rel='license', href='http://creativecommons.org/licenses/by-nc/3.0/us/') CC BY-NC 3.0
-        .socialmedia(style='margin-bottom:4.9em;')
-          a.smimg(href='http://medium.com/@ghostwhiteowl')
-            img(src='images/medium.jpeg', alt='', width='10%')
-          a.smimg(href='http://www.twitter.com/ghostwhiteowl')
-            img(src='images/twitter.png', alt='', width='10%')
-          a.smimg(href='http://somewhatnonfictional.com')
-            img(src='images/tumblr.png', alt='', width='10%')
-          a.smimg(href='http://www.flickr.com/photos/zackschuster/')
-            img(src='images/flickr.png', alt='', width='10%')
+    
+      cf-footer
+      
+    script(src='system.js')
+    script(src='config.js')
+    script(src='dist/js/bundle.js')
+    
+    script. 
+      System.import('dist/js/app.js')
+      
