--- a/src/jade/poetry.jade
+++ b/src/jade/poetry.jade
@@ -8,37 +8,4 @@
 .content
   ui-view
     
-  .nav
-    p
-    | Love: 
-    a(ui-sref="poetry.name({ series: 'love', number: '1' })") 1
-    a(ui-sref="poetry.name({ series: 'love', number: '2' })") 2
-    a(ui-sref="poetry.name({ series: 'love', number: '3' })") 3
-    a(ui-sref="poetry.name({ series: 'love', number: '4' })") 4
-    a(ui-sref="poetry.name({ series: 'love', number: '5' })") 5
-    a(ui-sref="poetry.name({ series: 'love', number: '6' })") 6
-    a(ui-sref="poetry.name({ series: 'love', number: '7' })") 7
-    p
-    | I Am: 
-    a(ui-sref="poetry.name({ series: 'i-am', number: '1' })") 1
-    a(ui-sref="poetry.name({ series: 'i-am', number: '2' })") 2
-    a(ui-sref="poetry.name({ series: 'i-am', number: '3' })") 3
-    a(ui-sref="poetry.name({ series: 'i-am', number: '4' })") 4
-    a(ui-sref="poetry.name({ series: 'i-am', number: '5' })") 5
-    a(ui-sref="poetry.name({ series: 'i-am', number: '6' })") 6
-    p
-    | Plagiarised: 
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '1' })") 1
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '2' })") 2
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '3' })") 3
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '4' })") 4
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '5' })") 5
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '6' })") 6
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '7' })") 7
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '8' })") 8
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '9' })") 9
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '10' })") 10
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '11' })") 11
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '12' })") 12
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '13' })") 13
-    a(ui-sref="poetry.name({ series: 'plagiarised', number: '14' })") 14
+  cf-poetry-nav
