--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,7 +30,6 @@ ul a{color: #151515; text-decoration: none; border-bottom: 0;}
 ul a:hover{border-bottom: 0.1em solid #F52887;}
 ul.padding > li { padding-bottom:1.5em; }
 
-
 a.extras { border-bottom: 0.1em solid #FFAAD3; }
 
 .container{width: 960px; overflow: hidden; position: relative; margin: 0 auto; padding-bottom: 2em;}
@@ -45,8 +44,8 @@ a.extras { border-bottom: 0.1em solid #FFAAD3; }
 .column a:hover{border-bottom: 0.1em solid #F52887;}
 
 .nav {float: left; width:100%; text-align:center; padding: 2em 0 2em 0;}
-.nav a{border:none;padding:0 0.5em 0 0.5em;}
-.nav a:hover{text-decoration: overline;}
+.nav span{cursor: pointer; padding:0 0.5em 0 0.5em;}
+.nav span:hover{text-decoration: overline;}
 
 .footer {float: left; width: 100%; color: #666; font-size: 0.8em; text-align:center; padding: 3em 0 0 0;}
 .footer a{color: #000; border-bottom: 0;}
