--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,61 +1,73 @@
 body{background: url(../../images/grunge.jpg) repeat; font-family: HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 11pt; text-align:left; color: #151515; line-height:1.5em; overflow-y:scroll;}
 
-h1{font-size: 1.8em; line-height: 1.1em; font-weight: normal;}
-h2{font-size: 1.5em; line-height: 1.1em; font-weight: normal;}
-h3{font-size: 1.2em; font-weight: normal;}
+h1 { font-size: 1.8em; line-height: 1.1em; font-weight: normal; }
+h2 { font-size: 1.5em; line-height: 1.1em; font-weight: normal; }
+h3 { font-size: 1.2em; font-weight: normal; }
 
-p.side{text-align:center; margin-top:0em; background: #fff; padding: 1.25em 0 1.25em 0;}
-p.caption{text-align:center;}
-img.side{margin-bottom:0.5em;}
-img.caption{margin: 1em; padding: 1em; border: 0.1em solid #ddd;}
-blockquote{border-left: 0.1em solid #A5ABAB; margin: 0 0 0 0.5em; padding: 0 0.5em 0 0.5em;}
+p.side { text-align:center; margin-top:0em; background: #fff; padding: 1.25em 0 1.25em 0; }
+p.caption { text-align:center; }
+img.side { margin-bottom:0.5em; }
+img.caption { margin: 1em; padding: 1em; border: 0.1em solid #ddd; }
+blockquote { border-left: 0.1em solid #A5ABAB; margin: 0 0 0 0.5em; padding: 0 0.5em 0 0.5em; }
 
 p.nav-links { text-align: center; }
 p.nav-links > a { margin: 0 2em; }
-a{color: #151515; text-decoration: none; border-bottom: 0.1em solid #FFAAD3;}
-a:hover{border-bottom: 0.1em solid #F52887;}
+a { color: #151515; text-decoration: none; border-bottom: 0.1em solid #FFAAD3; }
+a:hover{ border-bottom: 0.1em solid #F52887; }
 
-a:link.image {border-bottom:0 !important;}
-a:visited.image {border-bottom:0 !important;}
-a:hover.image {border-bottom:0 !important;}
-a:active.image {border-bottom:0 !important;}
+a:link.image { border-bottom:0 !important; }
+a:visited.image { border-bottom:0 !important; }
+a:hover.image { border-bottom:0 !important; }
+a:active.image { border-bottom:0 !important; }
 
-a:link.smimg {border-bottom:0 !important;}
-a:visited.smimg {border-bottom:0 !important;}
-a:hover.smimg {border-bottom: 0.1em solid #666 !important;}
-a:active.smimg {border-bottom: 0.1em solid #666 !important;}
+a:link.smimg { border-bottom:0 !important; }
+a:visited.smimg { border-bottom:0 !important; }
+a:hover.smimg { border-bottom: 0.1em solid #666 !important; }
+a:active.smimg { border-bottom: 0.1em solid #666 !important; }
 
-ul{list-style-type: none; padding: 0.5em 0 0 1em;}
-ul a{color: #151515; text-decoration: none; border-bottom: 0;}
-ul a:hover{border-bottom: 0.1em solid #F52887;}
+ul { list-style-type: none; padding: 0.5em 0 0 1em; }
+ul a { color: #151515; text-decoration: none; border-bottom: 0; }
+ul a:hover { border-bottom: 0.1em solid #F52887; }
 ul.padding > li { padding-bottom:1.5em; }
 
 a.extras { border-bottom: 0.1em solid #FFAAD3; }
 
-.container{width: 960px; overflow: hidden; position: relative; margin: 0 auto; padding-bottom: 2em;}
-.header {float: left; border:none;}
+.container { width: 960px; overflow: hidden; position: relative; margin: 0 auto; padding-bottom: 2em; }
+.header { float: left; border:none; }
 
-.content-image {width:23%; float:left; margin: 0 0.5em 0 0;}
-.content-header {width:67%; float: right; text-align:justify; padding: 0.5em 3em; margin: 0 0 0.5em 0; background:#fff;}
-.content {width:67%; float: right; text-align:justify; padding: 2em 3em 4em 3em; margin: 0 0 0.5em 0; background:#fff;}
+.content-image { width:23%; float:left; margin: 0 0.5em 0 0; }
+.content-header { width:67%; float: right; text-align:justify; padding: 0.5em 3em; margin: 0 0 0.5em 0; background:#fff; }
+.content { width:67%; float: right; text-align:justify; padding: 2em 3em 4em 3em; margin: 0 0 0.5em 0; background:#fff; }
 
-.column {float: left; width:100%; padding: 2em 0 2em 0; margin: 0 0 0.5em 0; background:#fff;}
-.column a{border-bottom: 0;}
-.column a:hover{border-bottom: 0.1em solid #F52887;}
+.column { float: left; width:100%; padding: 2em 0 2em 0; margin: 0 0 0.5em 0; background:#fff; }
+.column a { border-bottom: 0; }
+.column a:hover { border-bottom: 0.1em solid #F52887; }
 
-div.nav{padding: 2em 0; width:100%; text-align:center;}
-.nav button{font-size: 1.05em;}
-.nav button, .nav span{cursor: pointer; border: none; background: none; padding:0 0.5em;}
-.nav button:hover, .nav span:hover{text-decoration: overline;}
-.nav button:focus{outline: none;}
-.nav button:disabled{cursor: default; text-decoration: none;}
+.nav { padding: 2em 0; text-align:center; }
+.nav button { font-size: 3em; color:#999 }
+.nav button, .nav span { cursor: pointer; border: none; background: none; padding:0 0.5em; }
+.nav span:hover { text-decoration: overline; }
+.nav button:focus { outline: none; }
+.nav button:disabled { cursor: default; text-decoration: none; color: #ddd }
 
-.footer {float: left; width: 100%; color: #666; font-size: 0.8em; text-align:center; padding: 3em 0 0 0;}
-.footer a{color: #000; border-bottom: 0;}
-.footer a:hover{border-bottom: 0.1em solid #666;}
+.footer { float: left; width: 100%; color: #666; font-size: 0.8em; text-align:center; padding: 3em 0 0 0; }
+.footer a{ color: #000; border-bottom: 0; }
+.footer a:hover{ border-bottom: 0.1em solid #666; }
 
-.footer-index {width:76.2%; float: right; padding: 3em 0 0 0; font-size: 0.8em; text-align:center; background: #fff;}
-.footer-index a{color: #000; border-bottom: 0;}
-.footer-index a:hover{border-bottom: 0.1em solid #666;}
+.footer-index { width:76.2%; float: right; padding: 3em 0 0 0; font-size: 0.8em; text-align:center; background: #fff; }
+.footer-index a { color: #000; border-bottom: 0; }
+.footer-index a:hover { border-bottom: 0.1em solid #666; }
 
-.socialmedia {margin: 0 auto; padding-top:3em;}
+.socialmedia { margin: 0 auto; padding-top:3em; }
+
+/* Code from Animate.css: https://github.com/daneden/animate.css */
+.animated-poem {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+}
+
+@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+@keyframes fadeOut { from { opacity: 1; } to { opacity: 0; } }
+
+.fadeIn { animation-name: fadeIn; }
+.fadeOut { animation-name: fadeOut; }
